vsts-traefik-visualizer-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: azure-visualizer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: azure-visualizer
    spec:
      containers:
        - name: azure-visualizer
          image: $IMAGE_URL
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: ".50"
              memory: 128Mi
            requests:
              cpu: ".25"
              memory: 64Mi
      imagePullSecrets:
      - name: myregistrykey
