vsts-traefik-visualizer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-visualizer
  labels:
    k8s-app: azure-visualizer
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    k8s-app: azure-visualizer
